# deadbeef-playlist

./: .gitignore  LICENSE  README.md  dbpl.py  setup.cfg
dbpl/: __init__.py  dbpl.py
