[metadata]
name = dbpl
version = 1.0.1
author = Evgeny Zinoviev
author_email = me@ch1p.io
description =
long_description = file: README.md
license = BSD
license_file = LICENSE
long_description_content_type = text/markdown
url = https://github.com/gch1p/deadbeef-playlist.git
project_urls =
    Bug Tracker = https://github.com/gch1p/deadbeef-playlist/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = dbpl
python_requires = >=3.6
include_package_data = True